syntax = "proto3";

import "src/shared/types/typespb/types.proto";
import "src/common/base/statuspb/status.proto";

package pl.shared.scriptspb;

option go_package = "pixielabs.ai/pixielabs/src/shared/scriptspb;scriptspb";

// FuncArgsSpec specifies the flags that are defined within a query.
message FuncArgsSpec {
  message Arg {
    // The data type that this arg accepts
    types.DataType data_type = 1;
    // The semantic type that this arg accepts
    types.SemanticType semantic_type = 2;
    // The name of this arg.
    string name = 3;
    // The optional default value assigned to this arg.
    string default_value = 5;
  }
  repeated Arg args = 1;
}

// VisSpec provides information to specify the visualization of a function.
message VisSpec {
  string vega_spec = 1;
}

// VisFuncsInfo contains info about each px.vis annotated function.
message VisFuncsInfo {
  // Map from function name to doc string for that function.
  map<string, string> doc_string_map = 1;
  // Map from function name to VisSpec for the function.
  map<string, VisSpec> vis_spec_map = 2;
  // Mapping from function name to arguments.
  map<string, FuncArgsSpec> fn_args_map = 3;
}

message VisFuncsInfoResult {
  pl.statuspb.Status status = 1;
  VisFuncsInfo info = 2;
}

message MainFuncSpecResult {
  pl.statuspb.Status status = 1;
  FuncArgsSpec main_func_spec = 2;
}
